--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "worker": "ts-node src/worker/index.ts"
-  },
+  "build": "tsc",
+  "start:api": "node dist/index.js",
+  "start:worker": "node dist/worker.js",
+  "dev:api": "nodemon --watch src --exec ts-node src/index.ts",
+  "dev:worker": "nodemon --watch src --exec ts-node src/worker.ts"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
